# resume

./: .gitignore  .pre-commit-config.yaml  .python-version  Kristoffer David Knigga - Resume - Condensed.tex  Kristoffer David Knigga - Resume.tex  README.md  build.sh  index.html  install_tex.sh  pyproject.toml  resume.yaml  resume2html.sh  structure.tex  template.tex  template.tex.jinja2
generator/: __main__.py  models.py  testing.py
