[tool.poetry]
name = "generator"
version = "0.1.0"
description = "Generates my resume"
authors = ["Kris Knigga <kris@knigga.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.4"
pydantic-yaml = {extras = ["pyyaml"], version = "^0.8.1"}
pylint = "2.17.5"
pre-commit = "^3.4.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
prospector = {extras = ["with_mypy", "with_bandit"], version = "1.7.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
